--- a/app/views/report_snaps/index.html.erb
+++ b/app/views/report_snaps/index.html.erb
@@ -4,6 +4,7 @@
   <tr>
     <th>Desc</th>
     <th>Type</th>
+    <th>Type string</th>
     <th>User</th>
     <th>Data</th>
     <th>Tenant</th>
@@ -16,6 +17,7 @@
   <tr>
     <td><%= report_snap.desc %></td>
     <td><%= report_snap.type %></td>
+    <td><%= report_snap.type_string %></td>
     <td><%= report_snap.user %></td>
     <td><%= report_snap.data %></td>
     <td><%= report_snap.tenant %></td>
