--- a/app/views/report_snaps/show.html.erb
+++ b/app/views/report_snaps/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <b>Type string:</b>
+  <%= @report_snap.type_string %>
+</p>
+
+<p>
   <b>User:</b>
   <%= @report_snap.user %>
 </p>
