--- a/app/views/report_snaps/_form.html.erb
+++ b/app/views/report_snaps/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.number_field :type %>
   </div>
   <div class="field">
+    <%= f.label :type_string %><br />
+    <%= f.text_field :type_string %>
+  </div>
+  <div class="field">
     <%= f.label :user %><br />
     <%= f.text_field :user %>
   </div>
