extend grid serialize to json

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -13,6 +13,9 @@
     <%= javascript_include_tag "preload/classie.js" %>
     <%= javascript_include_tag "preload/snap.svg-min.js" %>
     <%= javascript_include_tag "preload/svgLoader.js" %>
+    <%= javascript_include_tag "xml2json" %>
+    <%= javascript_include_tag "dhtmlx" %>
+    <%= javascript_include_tag "dhtmlx-extend" %>
     <%= javascript_include_tag "reports/report.js" %>
     <%= javascript_include_tag "reports/main.js" %>
     <%= javascript_include_tag "reports/snap" %>
