--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -5,7 +5,7 @@
   </div>
   <ul id="my-reports">
     <p>Quality Gate</p>
-    <li><a class="<%='active' if @partial == 'data-view'%>" href="#current-status"><i class="icon-adjust mark"></i> Current status<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a class="<%='active' if @partial == 'data-view'%>" menu="current-status" href="#current-status"><i class="icon-adjust mark"></i> Current status<i class="icon-chevron-right indicate"></i></a></li>
     <li><a class="<%='active' if @partial == 'grid'%>" href="#summary-report"><i class="icon-columns mark"></i> Sumary report<i class="icon-chevron-right indicate"></i></a></li>
     <li><a ><i class="icon-list mark" href="#station-data"></i> Station data<i class="icon-chevron-right indicate"></i></a></li>
     <li><a ><i class="icon-screenshot mark" href="#tracking-report"></i> Tracking report<i class="icon-chevron-right indicate"></i></a></li>
