--- a/app/views/reports/_data-view.html.erb
+++ b/app/views/reports/_data-view.html.erb
@@ -27,7 +27,7 @@
     <a class="btn btn-func">Change data</a>
   </div>
 </section>
-
+<%= render 'snap'%>
 <% content_for :javascript_includes do %>
     <%= javascript_include_tag "reports/data-view" %>
     <%= javascript_include_tag "reports/data-current-status" %>
