--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -5,8 +5,9 @@
   </div>
   <ul id="my-reports">
     <p>Quality Gate</p>
-    <li><a class="<%='active' if @partial == 'data-view'%>" menu="current-status" href="#current-status"><i class="icon-adjust mark"></i> Current status<i class="icon-chevron-right indicate"></i></a></li>
-    <li><a class="<%='active' if @partial == 'grid'%>" menu="summary-report" href="#summary-report"><i class="icon-columns mark"></i> Sumary report<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a class="active" menu="current-status" href="#current-status"><i class="icon-adjust mark"></i> Current status<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a menu="daily-dpv"><i class="icon-columns mark"></i> Daily DPV<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a menu="summary-report" href="#summary-report"><i class="icon-columns mark"></i> Sumary report<i class="icon-chevron-right indicate"></i></a></li>
     <li><a ><i class="icon-list mark" menu="station-data" href="#station-data"></i> Station data<i class="icon-chevron-right indicate"></i></a></li>
     <li><a ><i class="icon-screenshot mark" menu="tracking-report" href="#tracking-report"></i> Tracking report<i class="icon-chevron-right indicate"></i></a></li>
     <li><a ><i class="icon-remove-sign mark" menu="defects" href="#deffects"></i> Defects<i class="icon-chevron-right indicate"></i></a></li>
