--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -96,13 +96,16 @@ $list-width:220px;
   .current-status{
     .header{
       width:100%;
-      height:55px;
+      height:85px;
       border-bottom:1px solid rgba(0,0,0,0.2);
       $margin-top:8px;
+      &:after{
+        @include after-clear;
+      }
       .left{
         float:left;
         @include box-sizing-border;
-        width:50%;
+        width:60%;
         p{
           $margin-left:10px;
           margin:0px;
@@ -119,11 +122,23 @@ $list-width:220px;
             color:$golden-text;
           }
         }
+        .btn-groups{
+          .btn{
+            float:left;
+            font-size:12px;
+//            width:60px;
+            padding:5px 18px;
+            display:inline-block;
+            margin-right:5px;
+            margin-left:8px;
+            margin-top:2px;
+          }
+        }
       }
       .right{
         float:left;
         @include box-sizing-border;
-        width:50%;
+        width:40%;
         $magin-right:40px;
         p{
           float:right;
@@ -139,10 +154,11 @@ $list-width:220px;
           }
         }
         select{
+//          margin-top:10px;
           margin-right:$magin-right;
           clear:right;
           float:right;
-          width:240px;
+          width:280px;
           paddding:5px 6px;
         }
       }
@@ -151,23 +167,6 @@ $list-width:220px;
       background-color:#fff;
       width:100%;
       overflow-y:auto;
-    }
-    .button-group{
-      height:120px;
-      border-top: 1px solid rgba(0,0,0,0.2);
-      @include box-sizing-border;
-      &:after{
-        @include after-clear;
-      }
-      .btn{
-        width:120px;
-        float:left;
-        display:inline-block;
-        margin-right:15px;
-        font-size:13px;
-        background:$nav-dark;
-        margin-top:15px;
-      }
     }
   }
 }
