--- a/app/views/reports/_data-view.html.erb
+++ b/app/views/reports/_data-view.html.erb
@@ -5,12 +5,12 @@
       <p id="current-date"></p>
       <p>Early shift</p>
       <div class="btn-groups">
-        <a class="btn btn-func">Refresh</a>
-        <a class="btn btn-func">Quick print</a>
-        <a class="btn btn-func" onclick="export_data_view_excel()">Excel</a>
-        <a class="btn btn-func">Target</a>
-        <a class="btn btn-func">All defects</a>
-        <a class="btn btn-func">Key station defects</a>
+        <a class="btn btn-primary">Refresh</a>
+        <a class="btn btn-primary">Quick print</a>
+        <a class="btn btn-primary" onclick="export_data_view_excel()">Excel</a>
+        <a class="btn btn-primary">Target</a>
+        <a class="btn btn-primary">All defects</a>
+        <a class="btn btn-primary">Key station defects</a>
         <!--<a class="btn btn-func">Change data</a>-->
       </div>
     </div>
@@ -24,8 +24,9 @@
     </div>
   </div>
   <div id="data_container" class="data-container"></div>
+  <%= render 'snap'%>
 </section>
-<%= render 'snap'%>
+
 <% content_for :javascript_includes do %>
     <%= javascript_include_tag "reports/data-view" %>
     <%= javascript_include_tag "reports/data-current-status" %>
