--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -12,7 +12,7 @@
     <li><a ><i class="icon-remove-sign mark" menu="defects" href="#deffects"></i> Defects<i class="icon-chevron-right indicate"></i></a></li>
     <li><a ><i class="icon-dashboard mark" menu="vehicle-info" href="#vehicle-info"></i> Vehicle information<i class="icon-chevron-right indicate"></i></a></li>
   </ul>
-  <a class="btn btn-primary share">Share to discussion</a>
+  <a class="btn btn-primary share" id="share_to_discussion_btn">Share to discussion</a>
 
   <a class="btn btn-success snap" id="snap-shot-button">Snap shot</a>
   <input type="text" id="snap-shot-desc" value="snap shot desc"/>
