--- a/app/views/reports/_snap.html.erb
+++ b/app/views/reports/_snap.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul class="snap-groups" id="snap-groups">
   <% @snaps.each do |snap| %>
       <li class="snap-li" snap="<%= snap.id %>" type="<%= snap.type_string %>">
         <span>Desc:<%= snap.desc %></span>
