--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -8,6 +8,7 @@
       <%= render "data-view" %>
   <% end %>
 </div>
+<input type="hidden" id="story-type-hidden">
 <% content_for :javascript_includes do %>
     <%= javascript_include_tag "func-module/format_time.js" %>
     <%= javascript_include_tag "preload/classie.js" %>
