--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -16,7 +16,7 @@
   <a class="btn btn-primary share" id="share_to_discussion_btn">Share to discussion</a>
 
   <a class="btn btn-success snap" id="snap-shot-button">Snap shot</a>
-  <input type="text" id="snap-shot-desc" value="snap shot desc"/>
+
 </section>
 </div>
 <div id="preloader" class="pageload-overlay" data-opening="M20,15 50,30 50,30 30,30 Z;M0,0 80,0 50,30 20,45 Z;M0,0 80,0 60,45 0,60 Z;M0,0 80,0 80,60 0,60 Z" data-closing="M0,0 80,0 60,45 0,60 Z;M0,0 80,0 50,30 20,45 Z;M20,15 50,30 50,30 30,30 Z;M30,30 50,30 50,30 30,30 Z">
@@ -24,3 +24,8 @@
     <path d="M30,30 50,30 50,30 30,30 Z"/>
   </svg>
 </div><!-- /pageload-overlay -->
+<section class="snap_block" id="snap_block">
+  <i class="icon icon-remove"></i>
+  <input type="text" id="snap-shot-desc" value="snap shot desc"/>
+  <a class="btn btn-success">finish</a>
+</section>
