--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -29,7 +29,8 @@
 
 <section class="snap_block" id="snap_block">
   <i class="icon icon-remove"></i>
-  <input type="text" id="snap-shot-desc" value="snap shot desc"/>
+  <p>Snap description</p>
+  <input type="text" id="snap-shot-desc"/>
   <a class="btn btn-success">finish</a>
 </section>
 
