--- a/app/views/reports/_daily-dpv.html.erb
+++ b/app/views/reports/_daily-dpv.html.erb
@@ -1,6 +1,6 @@
 <div>
   <h1>All Deffects</h1>
-  <div id="gridbox" style="width:600px; height:250px; background-color:white;"></div>
+  <div id="gridbox" style="height:500px;background-color:white;"></div>
 </div>
 <div width="500px">
   <select multiple class="chosen-select" data-placeholder="Model" id="deffect-model">
