--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -7,7 +7,7 @@
       <div class="btn-groups">
         <a class="btn btn-primary">Refresh</a>
         <a class="btn btn-primary">Quick print</a>
-        <a class="btn btn-primary" onclick="export_data_view_excel()">Excel</a>
+        <a class="btn btn-primary" onclick="export_report_excel()">Excel</a>
         <a class="btn btn-primary">Target</a>
         <a class="btn btn-primary">All defects</a>
         <a class="btn btn-primary">Key station defects</a>
