--- a/app/views/reports/_daily-dpv.html.erb
+++ b/app/views/reports/_daily-dpv.html.erb
@@ -13,7 +13,7 @@
   </div>
 </section>
 
-
+<a class="btn btn-primary" onclick="export_report_excel()">Excel</a>
 <script>
   $(document).ready(function(){
       Report.init("daily-dpv");
