--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -18,4 +18,5 @@
     <%= javascript_include_tag "reports/data-daily-dpv"%>
     <%= javascript_include_tag "reports/data-current-status" %>
     <%= javascript_include_tag "reports/current_status" %>
+    <%= javascript_include_tag "reports/data-station-data" %>
 <% end %>
