--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -19,4 +19,7 @@
     <%= javascript_include_tag "reports/data-current-status" %>
     <%= javascript_include_tag "reports/current_status" %>
     <%= javascript_include_tag "reports/data-station-data" %>
+    <%= javascript_include_tag "reports/html2canvas" %>
+    <%= javascript_include_tag "reports/canvas2image" %>
+    <%= javascript_include_tag "reports/base64" %>
 <% end %>
