--- a/app/assets/stylesheets/snap.css.scss
+++ b/app/assets/stylesheets/snap.css.scss
@@ -4,6 +4,35 @@
   border-top:1px solid rgba(0,0,0,0.2);
   overflow-y:hidden;
   overflow-x:auto;
+  white-space: nowrap;
+  display:block;
+  width:100%;
+  .snap-li{
+    cursor:pointer;
+    display:inline-block;
+    width:150px;
+    height:60px;
+    margin:10px 0px 0px 8px;
+    @include border-radius-same(3px);
+    border:1px solid rgba(0,0,0,0.2);
+    @include box-shadow(2px,2px,2px,rgba(0,0,0,0.5));
+    background:rgba(232,191,26,0.1);
+    padding:5px 8px;
+    p{
+      pointer-events:none;
+      font-size:13px;
+      margin:0px;
+      text-align:right;
+      &:nth-of-type(1){
+        margin-top:6px;
+        @include word-break;
+      }
+      &:nth-of-type(2){
+        color:#8b710b;
+        font-size:14px;
+      }
+    }
+  }
 }
 .snap_block{
   position:fixed;
@@ -38,6 +67,44 @@
     font-size:13px;
     padding:7px 14px;
     margin-top:9px;
-
+  }
+}
+.report_center_back_pop{
+  padding:15px !important;
+  .basic_info{
+    &:after{
+      @include after-clear;
+    }
+    .basic_left{
+      @include box-sizing-border;
+      width:50%;
+      float:left;
+      overflow-y:auto;
+    }
+    .basic_right{
+      @include box-sizing-border;
+      width:50%;
+      float:left;
+      overflow-y:auto;
+      p{
+        padding-left:0px;
+      }
+      textarea{
+        $width:210px;
+        width:$width;
+        max-width:$width;
+        min-width:$width;
+      }
+    }
+  }
+  .choose-by-select{
+    &>p{
+      color:$blue;
+    }
+  }
+  .choose-by-create{
+    &>p{
+      color:$blue;
+    }
   }
 }
