--- a/app/views/reports/_snap.html.erb
+++ b/app/views/reports/_snap.html.erb
@@ -1,8 +1,8 @@
-<ul class="snap-groups" id="snap-groups">
-  <% @snaps.each do |snap| %>
-      <li class="snap-li" snap="<%= snap.id %>" type="<%= snap.type_string %>">
-        <span>Desc:<%= snap.desc %></span>
-        <span>CreatedAt:<%= time_ago_in_words(snap.created_at.localtime) %> ago</span>
-      </li>
-  <% end %>
-</ul>
+<div class="snap-groups" id="snap-groups">
+    <% @snaps.each do |snap| %>
+        <div class="snap-li" snap="<%= snap.id %>" type="<%= snap.type_string %>">
+          <p><%= snap.desc %></p>
+          <p><%= time_ago_in_words(snap.created_at.localtime) %> ago</p>
+        </div>
+    <% end %>
+</div>
