--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -33,6 +33,6 @@
 
 <script>
     $(document).ready(function(){
-        Report.init("current-status");
+        Report.init("current_status");
     })
 </script>
