--- a/app/views/reports/_station-data.html.erb
+++ b/app/views/reports/_station-data.html.erb
@@ -1,8 +1,7 @@
-<div id="gridbox" style="height:500px; background-color:white;"></div>
+<div id="data_container" style="height:500px; background-color:white;"></div>
+<a class="btn btn-primary" onclick="export_report_excel()">Excel</a>
 <script>
 $(document).ready(function(){
-
-
-	Report.init("station-data");
+	Report.init("station_data");
 })
 </script>
