--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -6,10 +6,10 @@
   </div>
   <ul id="my-reports">
     <p>Quality Gate</p>
-    <li><a class="active" menu="current-status" href="#current-status"><i class="icon-adjust mark"></i> Current status<i class="icon-chevron-right indicate"></i></a></li>
-    <li><a menu="daily-dpv"><i class="icon-columns mark"></i> Daily DPV<i class="icon-chevron-right indicate"></i></a></li>
-    <li><a menu="station-data"><i class="icon-list mark" menu="station-data" href="#station-data"></i> Station data<i class="icon-chevron-right indicate"></i></a></li>
-	<li><a menu="summary-report" href="#summary-report"><i class="icon-columns mark"></i> Sumary report<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a class="active" menu="current_status" href="#current-status"><i class="icon-adjust mark"></i> Current status<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a menu="daily_dpv"><i class="icon-columns mark"></i> Daily DPV<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a menu="station_data"><i class="icon-list mark" menu="station-data" href="#station-data"></i> Station data<i class="icon-chevron-right indicate"></i></a></li>
+	<li><a menu="summary_report" href="#summary-report"><i class="icon-columns mark"></i> Sumary report<i class="icon-chevron-right indicate"></i></a></li>
     <li><a ><i class="icon-screenshot mark" menu="tracking-report" href="#tracking-report"></i> Tracking report<i class="icon-chevron-right indicate"></i></a></li>
     <li><a ><i class="icon-remove-sign mark" menu="defects" href="#deffects"></i> Defects<i class="icon-chevron-right indicate"></i></a></li>
     <li><a ><i class="icon-dashboard mark" menu="vehicle-info" href="#vehicle-info"></i> Vehicle information<i class="icon-chevron-right indicate"></i></a></li>
