--- a/app/views/reports/_daily-dpv.html.erb
+++ b/app/views/reports/_daily-dpv.html.erb
@@ -9,7 +9,8 @@
     </select>
     <select multiple class="chosen-select" data-placeholder="Deffect Date" id="deffect-date">
     </select>
-    <input type="button" value="Retrieve Data" onclick="Grid.filter()"/>
+    <input id="retrieve-data" type="button" value="Retrieve Data"/>
+
   </div>
 </section>
 
