--- a/app/views/reports/_daily-dpv.html.erb
+++ b/app/views/reports/_daily-dpv.html.erb
@@ -1,8 +1,10 @@
 <section class="daily_dpv">
   <div class="left">
-    <div id="data_container" style="height:500px;background-color:white;"></div>
+    <div id="chart_dpv_one" class="chart_dpv_one"></div>
+    <div id="data_container" class="data_container"></div>
+    <div id="chart_dpv_two" class="chart_dpv_two"></div>
   </div>
-  <div class="'right">
+  <div class="right">
     <select multiple class="chosen-select" data-placeholder="Model" id="deffect-model">
     </select>
     <select multiple class="chosen-select" data-placeholder="Phase" id="deffect-phase">
