--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -5,7 +5,7 @@
       <p id="current-date"></p>
       <p>Early shift</p>
       <div class="btn-groups">
-        <a class="btn btn-primary">Refresh</a>
+        <a class="btn btn-primary" id="refresh">Refresh</a>
         <a class="btn btn-primary" id="quick-print">Quick print</a>
         <a class="btn btn-primary" onclick="export_report_excel()">Excel</a>
         <a class="btn btn-primary">Target</a>
@@ -17,9 +17,9 @@
     <div class="right">
       <p><span>Current time:</span><span id="current-clock"></span></p>
       <select id="vehicle-select">
-        <option>Vehicle_1</option>
-        <option>Vehicle_2</option>
-        <option>Vehicle_3</option>
+        <option>CF11</option>
+        <option>CF14</option>
+        <option>CF16</option>
       </select>
     </div>
   </div>
