--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -15,6 +15,7 @@
     <%= javascript_include_tag "func-module/chosen"%>
     <%= javascript_include_tag "dhtmlx.js"%>
     <%= javascript_include_tag "dhtmlx-extend.js"%>
+    <%= javascript_include_tag "reports/rand"%>
     <%= javascript_include_tag "reports/data-daily-dpv"%>
     <%= javascript_include_tag "reports/data-current-status" %>
     <%= javascript_include_tag "reports/current_status" %>
