--- a/app/views/reports/_daily-dpv.html.erb
+++ b/app/views/reports/_daily-dpv.html.erb
@@ -1,18 +1,23 @@
 <section class="daily_dpv">
   <div class="left">
     <div id="chart_dpv_one" class="chart_dpv_one"></div>
-    <div id="data_container" class="data_container"></div>
     <div id="chart_dpv_two" class="chart_dpv_two"></div>
   </div>
   <div class="right">
-    <select multiple class="chosen-select" data-placeholder="Model" id="deffect-model">
-    </select>
-    <select multiple class="chosen-select" data-placeholder="Phase" id="deffect-phase">
-    </select>
-    <select multiple class="chosen-select" data-placeholder="Deffect Date" id="deffect-date">
-    </select>
-    <input id="retrieve-data" type="button" value="Retrieve Data"/>
+    <div class="condition">
+      <p>Model</p>
+      <select multiple class="chosen-select" id="deffect-model">
+      </select>
+      <p>Phase</p>
+      <select multiple class="chosen-select" id="deffect-phase">
+      </select>
+      <p>Deffect Date</p>
+      <select multiple class="chosen-select" id="deffect-date">
+      </select>
+      <input id="retrieve-data" type="button" value="Retrieve Data"/>
+    </div>
 
+    <div id="data_container" class="data_container"></div>
   </div>
 </section>
 
