--- a/app/views/story_sets/story.html.erb
+++ b/app/views/story_sets/story.html.erb
@@ -61,6 +61,7 @@
     <%= javascript_include_tag "preload/svgLoader.js" %>
     <%= javascript_include_tag "xml2json"%>
     <%= javascript_include_tag "reports/report.js" %>
+    <%= javascript_include_tag "func-module/chosen"%>
     <%= javascript_include_tag "dhtmlx.js"%>
     <%= javascript_include_tag "dhtmlx-extend.js"%>
     <%= javascript_include_tag "reports/rand"%>
