--- a/app/assets/stylesheets/report/snap.css.scss
+++ b/app/assets/stylesheets/report/snap.css.scss
@@ -15,8 +15,10 @@
     margin:10px 0px 0px 8px;
     @include border-radius-same(3px);
     border:1px solid rgba(0,0,0,0.2);
-    @include box-shadow(2px,2px,2px,rgba(0,0,0,0.5));
-    background:rgba(232,191,26,0.1);
+    @include box-shadow(2px,2px,2px,rgba(0,0,0,0.6));
+    background:url(/assets/snap-bg.png);
+    background-repeat:no-repeat;
+    background-size:cover;
     padding:5px 8px;
     p{
       pointer-events:none;
@@ -28,7 +30,7 @@
         @include word-break;
       }
       &:nth-of-type(2){
-        color:#8b710b;
+        color:#d8a303;
         font-size:14px;
       }
     }
