--- a/app/views/reports/_daily-dpv.html.erb
+++ b/app/views/reports/_daily-dpv.html.erb
@@ -1,14 +1,14 @@
 <section class="daily_dpv">
   <div class="left">
-    <div id="chart_layout">
       <div id="chart_dpv_one" class="chart_dpv_one"></div>
+      <div id="data_container" class="data_container"></div>
       <div id="chart_dpv_two" class="chart_dpv_two"></div>
-    </div>
-    <%= render 'snap'%>
+
   </div>
   <div class="right">
     <div class="condition">
-      <div class="condition_left">
+      <div class="condition_block">
+        <label>Condition</label>
         <p>Model</p>
         <select multiple class="chosen-select" data-placeholder=" " id="deffect-model">
         </select>
@@ -20,13 +20,16 @@
         </select>
         <a id="retrieve-data" class="btn btn-primary retrieve_data">Retrieve Data</a>
       </div>
-      <div class="condition_right">
-        <p>Export data</p>
-          <a class="btn btn-success btn_excel" onclick="export_report_excel()">Excel</a>
+      <div class="condition_block">
+        <label>Export data</label>
+        <a class="btn btn-success btn_excel" onclick="export_report_excel()">Excel</a>
+      </div>
+      <div class="condition_block">
+        <label>Snap shot</label>
+        <%= render 'snap'%>
       </div>
     </div>
 
-    <div id="data_container" class="data_container"></div>
   </div>
 </section>
 <script>
