--- a/app/views/story_sets/story.html.erb
+++ b/app/views/story_sets/story.html.erb
@@ -54,19 +54,18 @@
     <%= javascript_include_tag "highstock.js" %>
     <%= javascript_include_tag "high_chart_template_analytic.js" %>
     <%= javascript_include_tag "Analytics_init.js" %>
-    <%= javascript_include_tag 'magnific.popup/jquery.magnific-popup.min' %>
+    <!--Report JS-->
     <%= javascript_include_tag "func-module/format_time.js" %>
-    <%= javascript_include_tag "preload/classie.js" %>
-    <%= javascript_include_tag "preload/snap.svg-min.js" %>
-    <%= javascript_include_tag "preload/svgLoader.js" %>
     <%= javascript_include_tag "xml2json"%>
     <%= javascript_include_tag "reports/report.js" %>
+    <%= javascript_include_tag "reports/snap" %>
     <%= javascript_include_tag "func-module/chosen"%>
     <%= javascript_include_tag "dhtmlx.js"%>
     <%= javascript_include_tag "dhtmlx-extend.js"%>
     <%= javascript_include_tag "reports/rand"%>
     <%= javascript_include_tag "reports/data-daily-dpv"%>
     <%= javascript_include_tag "reports/data-current-status" %>
+    <%= javascript_include_tag "reports/sample_data" %>
     <%= javascript_include_tag "reports/current_status" %>
     <%= javascript_include_tag "reports/data-station-data" %>
     <%= javascript_include_tag "reports/html2canvas" %>
@@ -75,6 +74,7 @@
     <%= javascript_include_tag "highstock" %>
     <%= javascript_include_tag "Highchart/Highchart_generator" %>
     <%= javascript_include_tag "reports/daily_dpv" %>
+    <!--Report JS-->
 <% end %>
 
 <% content_for :stylesheet_includes do %>
