--- a/app/views/reports/_station-data.html.erb
+++ b/app/views/reports/_station-data.html.erb
@@ -1,3 +1,4 @@
+<input type="button" value="Retrieve" id="retrieve"/>
 <div id="data_container" style="height:500px; background-color:white;"></div>
 <a class="btn btn-primary" onclick="export_report_excel()">Excel</a>
 <script>
