--- a/app/views/stories/_detail.html.erb
+++ b/app/views/stories/_detail.html.erb
@@ -48,7 +48,7 @@
 <script type="text/javascript">
     $(function () {
         attach_upload("comment-item-data-uploader");
-        $('.atta-image').magnificPopup({type: 'image'});
+        //$('.atta-image').magnificPopup({type: 'image'});
     });
 
 </script>
