--- a/app/views/reports/_snap.html.erb
+++ b/app/views/reports/_snap.html.erb
@@ -1,4 +1,4 @@
-<div class="snap-groups snap-content" id="snap-groups">
+<div class="snap-groups" id="snap-groups">
       <% @snaps.each do |snap| %>
           <div class="snap-li" snap="<%= snap.id %>" type="<%= snap.type_string %>">
             <p><%= snap.desc %></p>
