--- a/app/assets/stylesheets/report/snap.css.scss
+++ b/app/assets/stylesheets/report/snap.css.scss
@@ -8,7 +8,7 @@
   display:block;
   width:100%;
   position:relative;
-  &.snap-content:before{
+  &:before{
     content:"Snapshot";
     position:absolute;
     font-size:17px;
